[WKP-1102] Use go-git-providers in team workspaces (#1405)
* Update github-service to use ggp

* Add go-git-providers to teams

* Add go-git-providers to AddKeyToRepo()

* Update repomanager to use ggp

* Fix repomanager github version

* Refactor repo manager

* Update CreateEmpty() and RegisterDeployKey()

* Add comment before function

* Fix return type

* Return error

* User org instead of user

* revert go.sum

* Update Create()

* Update go.mod

* Remove incompatible github version

* Revert go.sum

* Test go.sum for repo controller

* Refactor

* Remove empty line

* Add new line

* Revert file

* Remove repository-controller

* Port ggp into twc

* Upgrade GOURL version

* Resolve conflict

* Use user instead of org in hub

* Revert hub.go changes for now

* Check if provided gitProviderOrg is an actual organization or a user

* Check if gitProviderOrg is a user or an organization

* Refactor

* Remove unused functions

* Fix registering deply key error

* Add log message before reconciling repo

* Add repo and org for debugging

* Create a function to return a new github client

* Switch visibiltiy variable condition

* Move ctx closer to where it first used

* Refactor

* Remove duplicate fn

* Resolve conflict

* Rename hub package to ggp

* Replace NewOrgRef

* Remove import cycle

* Remove duplicate fns

* Revert

* Add ggp module before function

* set GITHUB_TOKEN for integration test

* Use reconcile instead of create

* Remove retry

* Update circleci config

* Remove redundant sed cmd

* Increase sleep time before asserting ws existence

* Increase sleep time

* Fixing c.t passing to each subtest

* Use token instead of envar

* Check for user or org before installing

* Add argument to fn

* Remove unused functions from git.go

* Return gitURL instead of repository

* Remove duplicate functions

* Revert changes

* Update cmd/

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -361,7 +361,7 @@ jobs:
             # create file with docker password
             export CLUSTER_NAME="$CIRCLE_JOB-$CIRCLE_BUILD_NUM"
             echo "$DOCKER_IO_PASSWORD" > /tmp/workspace/docker-io-password
-            sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GITHUB_USER/" config.yaml
+            sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GITHUB_ORG/" config.yaml
             sed -i "s/dockerIOUser:.*/dockerIOUser: $DOCKER_IO_USER/" config.yaml
             sed -i "s|dockerIOPasswordFile:.*|dockerIOPasswordFile: /tmp/workspace/docker-io-password|" config.yaml
             sed -i "s/clusterName:.*/clusterName: $CLUSTER_NAME/" config.yaml
@@ -378,7 +378,7 @@ jobs:
             go test -v -run TestEntitlements
             # run before setting GITHUB_TOKEN
             go test -v -run TestHubAuthCheck
-            export GITHUB_TOKEN=bar
+            export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
             go test -v -run TestRunMultipleSetupInstall
 
             go test -v -run TestImageRepositoryCheck
@@ -459,7 +459,7 @@ jobs:
             export CLUSTER_NAME="$CIRCLE_JOB-$CIRCLE_BUILD_NUM"
             # create file with docker password
             echo "$DOCKER_IO_PASSWORD" > /tmp/workspace/docker-io-password
-            sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GITHUB_USER/" config.yaml
+            sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GITHUB_ORG/" config.yaml
             sed -i "s/dockerIOUser:.*/dockerIOUser: $DOCKER_IO_USER/" config.yaml
             sed -i "s|dockerIOPasswordFile:.*|dockerIOPasswordFile: /tmp/workspace/docker-io-password|" config.yaml
             sed -i "s/clusterName:.*/clusterName: $CLUSTER_NAME/" config.yaml
@@ -899,11 +899,6 @@ jobs:
       - setup-integration-test-env
       - run:
           <<: *setup-base-gce-config-yaml
-      - run:
-          name: Add github org values
-          command: |
-            cd test/integration/test
-            sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GITHUB_ORG/" config.yaml
       - run:
           name: Run e2e tests
           command: |
