--- a/.github/workflows/trigger-integration-tests.yaml
+++ b/.github/workflows/trigger-integration-tests.yaml
@@ -1,45 +1,81 @@
-name: trigger-integration-tests
-
+name: Run integration tests command
 on:
-  pull_request:
-    types: [opened]
-  issue_comment:
-    types: [created]
-
+  repository_dispatch:
+    types: [test-command]
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: khan/pull-request-comment-trigger@bb03972cc9f423111f3b5a23fcc9fd32741acabb
-        id: check
+      - uses: actions/checkout@v2
         with:
-          trigger: "/test"
-          reaction: rocket
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
-      - name: GitHub API Request
-        id: request
-        if: steps.check.outputs.triggered == 'true'
-        # ~v2.0.0
-        uses: octokit/request-action@57ec46afcc4c58c813af3afe67e57ced1ea9f165
-        with:
-          route: ${{ github.event.issue.pull_request.url }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Github actions on run on master so use master
-      # ~v2
-      - uses: actions/checkout@28c7f3d2b5162b5ddd3dfd9a45aa55eaf396478b
+          repository: ${{ github.event.client_payload.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.client_payload.pull_request.head.ref }}
 
       - name: Run Kubernetes tools
-        if: steps.check.outputs.triggered == 'true'
-        # ~v1
-        uses: stefanprodan/kube-tools@48a6ad249bbec6e78f5f231568970406e0f41ae2
+        id: run-the-tests
         env:
-          WEAVEWORKSBOT_CIRCLECI_TOKEN: "${{ secrets.WEAVEWORKSBOT_CIRCLECI_TOKEN }}"
+          CIRCLECI_TOKEN: ${{ secrets.WEAVEWORKSBOT_CIRCLECI_TOKEN }}
+        run: |
+          set -x
+
+          branch="${{ github.event.client_payload.pull_request.head.ref }}"
+          job="${{ github.event.client_payload.slash_command.args.unnamed.arg1 }}"
+          exitcode="0"
+
+          # Run all the tests if no job was specified
+          if [ -z "${job}" ]; then
+            output=$(./tools/trigger-integration-tests.sh "${branch}" 2>&1) || exitcode=$?
+          else
+            output=$(./tools/trigger-single-integration-test.sh "${job}" "${branch}" 2>&1) || exitcode=$?
+          fi
+
+          # Set the body as a Github Action Output so we can read it below
+          echo ::set-output name=exitcode::"$exitcode"
+          if [ "$exitcode" == 0 ]; then
+            exit 0
+          fi
+
+          # Format the message for github
+          # -----------------------------
+          # -----------------------------
+          prefix=' :x:
+
+          ---
+          Test launcher output:
+          ```
+          '
+
+          suffix='
+          ```
+          '
+
+          body="${prefix}${output}${suffix}"
+          # -----------------------------
+          # -----------------------------
+
+          #
+          # Escape newlines, special github comment voodoo, details:
+          # https://github.com/peter-evans/create-or-update-comment#setting-the-comment-body-from-a-file
+          #
+          body="${body//'%'/'%25'}"
+          body="${body//$'\n'/'%0A'}"
+          body="${body//$'\r'/'%0D'}" 
+          echo ::set-output name=body::$body
+
+      - name: Add reaction if everything went okay
+        if: steps.run-the-tests.outputs.exitcode == '0'
+        # v1
+        uses: peter-evans/create-or-update-comment@41f3207a84f33bd70388036109082784d059dcaa
         with:
-          command: |
-            branch="${{ fromJson(steps.request.outputs.data).head.ref }}"
-            echo "Trigger integration tests on ${branch}"
-            ./tools/trigger-integration-tests.sh "${branch}"
+          repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
+          comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
+          reaction-type: hooray
+
+      - name: Add stderr if exitcode != 0
+        if: steps.run-the-tests.outputs.exitcode != '0'
+        # v1
+        uses: peter-evans/create-or-update-comment@41f3207a84f33bd70388036109082784d059dcaa
+        with:
+          repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
+          comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
+          body: ${{ steps.run-the-tests.outputs.body }}
