[WKP-991] Change dropdown to a text field (#1495)
* Change dropdown to a text field

* Adds a mat-ui autocomplete field for version selection

* Fixes up upgrade input styling and tidy up error message

Can't apply the --skip-check-exists from the UI

* rm a console.log

* Send track through to the UI finally

* Only show cluster version on ssh/footloose

Co-authored-by: Simon Howe <footless@gmail.com>

--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -108,6 +108,7 @@ config: # remember to consult `ui/src/entities/config.ts` before making any chan
     name: My Cluster
     provider: ''
     regions: ''
+    track: ''
     isManagementCluster: true
     managementClusterLink: ''
   homepage:
