--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /test/resource/tests
 /test/integration/test/hosts_private
 /test/integration/test/hosts_public
+/user-guide/templated-config.toml
 /user-guide/public
 /user-guide/resources/_gen
 
