[WKP-1661] Create wkp-agent (#1609)
* Add `wkp-agent` CLI that watches for Kubernetes events and sends them off to a NATS endpoint.
* Add unit tests for watching events using the Kubernetes `fake` clientset
* Add unit test for sending/receiving events from/to NATS

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -473,6 +473,8 @@ jobs:
 
             go test -v -run TestImageRepositoryCheck
 
+            go test -v -run TestAgent
+
             cd ../../../cmd/workspaces-controller
             make test
 
