--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -351,6 +351,8 @@ jobs:
             - kubectl
             - cmd/wk/wk
             - cmd/mock-https-authz-server/server
+            - ui/node_modules
+            - wkp-cluster-components/node_modules
       - run: docker login -u "$DOCKER_IO_USER" -p "$DOCKER_IO_PASSWORD" docker.io
       - run: make push
 
@@ -1207,6 +1209,13 @@ jobs:
     steps:
       - checkout
       - add-go-mod-ssh-keys
+      - attach_workspace:
+          at: /tmp/workspace
+      - run:
+          name: Use cached node_modules
+          command: |
+            mv /tmp/workspace/ui/node_modules ui/node_modules
+            mv /tmp/workspace/wkp-cluster-components/node_modules wkp-cluster-components/node_modules
       - run:
           name: Check third party dependencies
           command: |
@@ -1214,7 +1223,7 @@ jobs:
             GITHUB_TOKEN=$WKP_GITHUB_TOKEN bin/sca-generate-deps.sh
 
             # Check if dependency info changed
-            if git diff --name-only | grep 'user-guide/content/deps/_index.md'; then
+            if ! git --no-pager diff --exit-code user-guide/content/deps/_index.md; then
               echo "found a change in the deps doc pls go and update it!"
               exit 1
             else
