[WKP-1708, WKP-1716, WKP-1712] Connect event writer to NATS (#1627)
Co-authored-by: Simon Howe <footless@gmail.com>

--- a/cmd/event-writer/Dockerfile
+++ b/cmd/event-writer/Dockerfile
@@ -1,7 +1,29 @@
+FROM golang:1.14 as builder
+
+WORKDIR /workspace
+
+COPY go.mod go.mod
+COPY go.sum go.sum
+
+# cache modules
+RUN go mod download
+
+# copy source code
+COPY main.go main.go
+COPY converter/ converter/
+COPY database/ database/
+COPY run/ run/
+COPY subscribe/ subscribe/
+COPY messages/ messages/
+
+# build
+RUN CGO_ENABLED=1 go build -ldflags '-linkmode external -w -extldflags "-static"' -o event-writer main.go
+
 FROM alpine:3.12
 
-ADD event-writer /
+COPY --from=builder /workspace/event-writer /event-writer
 
+COPY start.sh /
 RUN apk add --no-cache tini
 
-ENTRYPOINT [ "/sbin/tini", "--", "/event-writer" ]
+ENTRYPOINT [ "/sbin/tini", "--", "/start.sh"]
