--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -428,10 +428,18 @@ jobs:
             export KUBESEAL_BINARY_PATH=/src/github.com/weaveworks/wks/setup/wk-quickstart/bin/kubeseal # used in unit-tests of workspaces/create_test.go
             export SEALED_SECRETS_CERT_PATH=/src/github.com/weaveworks/wks/test/integration/test/test-sealed-secrets-cert.crt # used in unit-tests of workspaces/create_test.go
             export WKP_NO_SCOPES_GITHUB_TOKEN=$WKP_NO_SCOPES_GITHUB_TOKEN
-            go get github.com/modocache/gover github.com/mattn/goveralls
+            go get github.com/mattn/goveralls
+
+            # Run the tests
             make unit-tests-with-coverage BUILD_IN_CONTAINER=false
-            gover
-            goveralls -coverprofile=gover.coverprofile -service=circle-ci -repotoken $WKP_COVERALLS_TOKEN
+
+            # submit the coverage 1 by 1, seems important that they have a -flagname
+            goveralls -coverprofile=.coverprofile -flagname wks -parallel -service=circle-ci -repotoken $WKP_COVERALLS_TOKEN
+            (cd cmd/event-writer; goveralls -coverprofile=.coverprofile -flagname event-writer -parallel -service=circle-ci -repotoken $WKP_COVERALLS_TOKEN)
+
+            # We've finished submitting the coverage
+            curl -k "https://coveralls.io/webhook?repo_token=$WKP_COVERALLS_TOKEN" \
+              -d "payload[build_num]=$CIRCLE_BUILD_NUM&payload[status]=done"
 
   container-tests:
     machine:
