[WKP-1707] Implements batch writes for Events (#1634)
* Add event-writer README.md
* Implement batch writing for events, refactor Event model
* Add logging levels

--- a/cmd/event-writer/Dockerfile
+++ b/cmd/event-writer/Dockerfile
@@ -12,6 +12,7 @@ RUN go mod download
 COPY main.go main.go
 COPY converter/ converter/
 COPY database/ database/
+COPY queue/ queue/
 COPY run/ run/
 COPY subscribe/ subscribe/
 COPY messages/ messages/
