[WKP-1789, WKP-1796] Adds reading from the database to gitops-broker (#1635)
* Adds reading from the database to gitops-broker
- Pull out database code into a common go module
* Connect gitops-broker up to the sqlite database
- Adds /api/clusters endpoint and returns all clusters as JSON

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -436,6 +436,7 @@ jobs:
             # submit the coverage 1 by 1, seems important that they have a -flagname
             goveralls -coverprofile=.coverprofile -flagname wks -parallel -service=circle-ci -repotoken $WKP_COVERALLS_TOKEN
             (cd cmd/event-writer; goveralls -coverprofile=.coverprofile -flagname event-writer -parallel -service=circle-ci -repotoken $WKP_COVERALLS_TOKEN)
+            (cd common; goveralls -coverprofile=.coverprofile -flagname common -parallel -service=circle-ci -repotoken $WKP_COVERALLS_TOKEN)
 
             # We've finished submitting the coverage
             curl -k "https://coveralls.io/webhook?repo_token=$WKP_COVERALLS_TOKEN" \
