[WKP-1801] Adds event-writer liveness probe (#1639)
- Add liveness package and associated unit tests

Co-authored-by: Yiannis <yiannis@weave.works>

--- a/cmd/event-writer/Dockerfile
+++ b/cmd/event-writer/Dockerfile
@@ -20,6 +20,8 @@ COPY $EWPATH/queue/ queue/
 COPY $EWPATH/run/ run/
 COPY $EWPATH/subscribe/ subscribe/
 COPY $EWPATH/messages/ messages/
+COPY $EWPATH/liveness/ liveness/
+
 
 # build
 RUN CGO_ENABLED=1 go build -ldflags '-linkmode external -w -extldflags "-static"' -o event-writer main.go
