--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,7 +237,7 @@ commands:
       - attach_workspace:
           at: /tmp/workspace
       - get-wk-binary
-  
+
   install-kind:
     description: 'Installs kind'
     steps:
@@ -247,7 +247,7 @@ commands:
             curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.9.0/kind-linux-amd64
             chmod +x ./kind
             sudo mv ./kind /usr/local/bin/kind
-  
+
   run-sonobuoy-tests:
     description: 'Runs conformance tests using sonobuoy'
     parameters:
@@ -255,7 +255,7 @@ commands:
         type: string
         default: "1.19.3"
     steps:
-      - run: 
+      - run:
           name: Create cluster
           command: |
             export PATH=$GOROOT/bin:$PATH
@@ -531,7 +531,6 @@ jobs:
             # Skip the y/n prompt when installing wks-components
             export SKIP_PROMPT=1
             go test -v -run TestClusterCreation --timeout=99999s
-
             eksctl delete cluster -f eks-cluster.yaml
       - run:
           # Ensures that the GCP resources are deleted even if the previous step fails
@@ -616,6 +615,7 @@ jobs:
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
             go test -v -run TestClusterCreation --timeout=99999s
+            go test -v -run TestFlavoredClusterCreation --timeout=99999s
 
             ../bin/internal/run-integration-tests.sh destroy
       - run:
@@ -1099,7 +1099,7 @@ jobs:
             hub delete -y "${WKP_GITHUB_ORG}/${CIRCLE_JOB}-${CIRCLE_BUILD_NUM}"
             export GITLAB_PROJECT_URL="${WORKSPACES_GITLAB_ORG}%2F${CIRCLE_JOB}-${CIRCLE_BUILD_NUM}"
             curl --request DELETE --header "Authorization: Bearer ${WORKSPACES_GITLAB_ORG_ADMIN_TOKEN}" --header "Content-Type: application/json" "https://gitlab.com/api/v4/projects/${GITLAB_PROJECT_URL}"
-          when: on_fail    
+          when: on_fail
 
   existing-cluster-tests:
     machine:
